SERVER-54041 ReshardingOplogApplicationRules::applyOperation() doesn't retry on WriteConflictExceptions